design Login and Register .xml + corresponding string resources

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">RomaniIteDomum</string>
+    <string name="edit_login_email">enter your email</string>
+    <string name="edit_login_password">enter your password</string>
+    <string name="button_login_confirm">Confirm</string>
+    <string name="button_login_register">Register</string>
+    <string name="text_login_reset_password">forgotten password?</string>
+    <string name="edit_register_name">enter your name</string>
+    <string name="edit_register_email">enter your email</string>
+    <string name="edit_register_password">password</string>
+    <string name="edit_register_password_again">password again</string>
+    <string name="button_register_submit">Submit</string>
+    <string name="button_register_login">Back to Login</string>
 </resources>
