--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">RomaniIteDomum</string>
     <string name="edit_login_email">enter your email</string>
     <string name="edit_login_password">enter your password</string>
-    <string name="button_login_confirm">Confirm</string>
+    <string name="button_login_confirm">Login</string>
     <string name="button_login_register">Register</string>
     <string name="text_login_reset_password">Forgot Password? Reset here.</string>
     <string name="edit_register_name">enter your name</string>
@@ -11,4 +11,5 @@
     <string name="edit_register_password_again">password again</string>
     <string name="button_register_submit">Submit</string>
     <string name="button_register_login">Back to Login</string>
+    <string name="toast_empty_fields">Please fill in credentials</string>
 </resources>
