--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="edit_register_password_again">password again</string>
     <string name="button_register_submit">Submit</string>
     <string name="button_register_login">Back to Login</string>
-    <string name="toast_empty_fields">Please fill in credentials</string>
+    <string name="toast_empty_fields">Please fill empty fields</string>
+    <string name="toast_invalid_password">Please make sure password is correct!</string>
 </resources>
