--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="toast_forgot_password">Please enter your email address!</string>
     <string name="toast_backendless_reset_password_instructions">Reset instructions sent to email address!</string>
     <string name="toast_google_service_error">You can\'t make map requests</string>
+    <string name="toast_map_ready">Map is ready</string>
 </resources>
