--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,11 +16,14 @@
     <string name="toast_empty_fields">Please fill empty fields</string>
     <string name="toast_invalid_password">Please make sure password is correct!</string>
     <string name="toast_backendless_error">Error:</string>
-    <string name="register_backendless_user">Registering... please wait...</string>
+    <string name="register_backendless_user">Busy registering user... please wait...</string>
     <string name="toast_login_successful">Logged in successfully!</string>
     <string name="toast_forgot_password">Please enter your email address!</string>
     <string name="toast_backendless_reset_password_instructions">Reset instructions sent to email address!</string>
     <string name="toast_google_service_error">You can\'t make map requests</string>
     <string name="toast_map_ready">Map is ready</string>
     <string name="toast_location_null">unable to get current location</string>
+    <string name="login_check_credentials">Busy checking login credentials... please wait...</string>
+    <string name="login_user">Loggin you in... please wait...</string>
+    <string name="reset_sending_information">Busy sending reset instructions... please wait...</string>
 </resources>
