--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,13 @@
     <string name="login_check_credentials">Busy checking login credentials... please wait...</string>
     <string name="login_user">Loggin you in... please wait...</string>
     <string name="reset_sending_information">Busy sending reset instructions... please wait...</string>
+    <string name="ic_share">share</string>
+    <string name="ic_settings">settings</string>
+    <string name="ic_logout">logout</string>
+    <string name="ic_info">impressum</string>
+    <string name="ic_send">send</string>
+    <string name="ic_map">Map</string>
+    <string name="ic_artefacts">Artefacts</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
 </resources>
