showProgress(true) saving image

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,5 @@
     <string name="button_new_artefact_audio_stop">Stop</string>
     <string name="button_new_artefact_audio_remove">Remove</string>
     <string name="list_of_artefacts">List of Artefacts</string>
+    <string name="new_artefact_save_image">Saving image... please wait...</string>
 </resources>
