--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="button_new_artefact_audio_remove">Remove</string>
     <string name="list_of_artefacts">List of Artefacts</string>
     <string name="new_artefact_save_image">Saving image... please wait...</string>
+    <string name="retrieve_artefacts_from_backendless">Retrieve artefacts... please wait...</string>
 </resources>
