--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,5 @@
     <string name="list_of_artefacts">List of Artefacts</string>
     <string name="new_artefact_save_image">Saving image... please wait...</string>
     <string name="retrieve_artefacts_from_backendless">Retrieve artefacts... please wait...</string>
+    <string name="user_logout">Logout successful</string>
 </resources>
