--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,4 +59,5 @@
     <string name="artefact_detail_category">Artefact detail category</string>
     <string name="artefact_detail_description">Artefact detail description</string>
     <string name="button_artefact_detail_show_marker_on_map">Show marker</string>
+    <string name="artefact_detail_save_rating">rate</string>
 </resources>
