--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,8 +35,8 @@
     <string name="ic_drawer_artefacts">Artefacts</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="hint_new_artefact_name">Name of artefact</string>
-    <string name="hint_new_artefact_description">Describe the artefact</string>
+    <string name="hint_new_artefact_name">Artefact name</string>
+    <string name="hint_new_artefact_description">Artefact description</string>
     <string name="hint_new_artefact_date">Which epoche?</string>
     <string name="button_new_artefact">Save</string>
     <string name="button_new_artefact_image">Take a picture</string>
