--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,4 +63,5 @@
     <string name="origin">origin</string>
     <string name="navigate_to_artefact_activity">artefacts</string>
     <string name="new_artefact_add_category">Add Category</string>
+    <string name="mapactivity_title">ArtefactMap</string>
 </resources>
