--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,4 +64,5 @@
     <string name="navigate_to_artefact_activity">artefacts</string>
     <string name="new_artefact_add_category">Add Category</string>
     <string name="mapactivity_title">ArtefactMap</string>
+    <string name="login_empty_field_error">Field can\'t be empty</string>
 </resources>
