--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,4 +76,5 @@
     <string name="artefact_detail_delete_audio">Delete Audio file... please wait...</string>
     <string name="artefact_detail_remove_marker">Remove Marker... please wait...</string>
     <string name="artefact_detail_delete_artefact">Delete Artefact... please wait...</string>
+    <string name="button_edit_artefact">Edit Artefact</string>
 </resources>
